--- a/src/components/advertisements/advertisements.css
+++ b/src/components/advertisements/advertisements.css
@@ -2,3 +2,67 @@
   display: flex;
   flex-direction: column;
 }
+
+.advertisements__container {
+  padding-bottom: 30px;
+}
+
+.advertisements__header {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+
+.advertisements__title {
+  font-size: 24px;
+  padding-right: 20px;
+  font-weight: bold;
+}
+
+.advertisements__images-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.advertisements__price {
+  font-weight: bold;
+  align-self: flex-end;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+}
+
+.advertisements__price--red {
+  background-color: orangered;
+}
+
+.advertisements__price--green {
+  background-color: greenyellow;
+}
+
+.advertisements__image {
+  border-radius: 10px;
+  margin: 10px;
+  width: 48%;
+  height: fit-content;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 768px) {
+  .advertisements__image--wide {
+    width: 95%;
+  }
+}
+
+.action-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.action-bar__item {
+  margin-left: 10px;
+}
